# agentic_ai_ete

./: .gitignore  pyproject.toml
1_Basics_of_LC/: 1_simple_llm_lcel.ipynb  2_serve.py
2_Chatbot_LC/: 1_chatbots.ipynb  2_chatbot_with_history_management.ipynb  3_vectorstore_retrievers.ipynb
3_LangGraph/: 1_simple_graph.ipynb  2_simple_chatbot.ipynb  3_data_class.ipynb  4_pydatic.ipynb  5_chains.ipynb  6_chatbot_multiple_tools.ipynb  7_chatbot_tracing.ipynb  7_chatbot_tracing_memory.ipynb  8_streaming.ipynb
4_Debbug_LG/: chatbot_workflow.py  langgraph.json
5_WorkFlows_LG/: 1_prompt_chaining.ipynb  2_parallel_workflow.ipynb  3_routing_technique.ipynb  4_orchestrator_worker.ipynb  5_evaluator_optimizer.ipynb
6_HITL_LG/: 1_human_in_the_loop.ipynb  2_hitl_runtime.ipynb
7_Agentic_RAG/: 1_agentic_rag.ipynb  2_corrective_rag.ipynb
